crates/schemas/tests/compile-fail/public_impl_future_trait.rs
//! Test that invalid trait definitions fail to compile

// This should fail: trait with conflicting bounds
pub trait BadTrait {
    type Item: Clone + !Clone; // Conflicting bounds
}

fn main() {}