crates/schemas/tests/compile-fail/public_impl_future_trait.stderr
error: negative bounds are not supported
 --> tests/compile-fail/public_impl_future_trait.rs:5:24
  |
5 |     type Item: Clone + !Clone; // Conflicting bounds
  |                        ^
